Fixed height for header, close the annoying gap.

--- a/WWW/scenery/css/style.css
+++ b/WWW/scenery/css/style.css
@@ -1,5 +1,6 @@
 DIV.titleback {
     background: rgb(94, 126, 167);
+    height: 110px;
 }
 
 BODY {
